apps/production/apaxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apaxy
spec:
  selector:
    app: apaxy
  ports:
  - name: web
    port: 80
    targetPort: 80
