apps/production/apaxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-sso@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: apaxy
spec:
  rules:
  - host: files.samsonnguyen.ca
    http:
      paths:
      - backend:
          service:
            name: apaxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - files.samsonnguyen.ca
    secretName: files-samsonnguyen-ca-tls
status:
  loadBalancer: {}
